// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Orders > should cancel an order 1`] = `
{
  "cancellation_message": Any<String>,
  "cancelled_at": Any<String>,
  "customer_reference": "1337",
  "metadata": {
    "userId": 100,
  },
  "order_id": Any<String>,
  "order_url": Any<String>,
  "sendle_reference": Any<String>,
  "state": "Cancelled",
  "tracking_url": Any<String>,
}
`;

exports[`Orders > should create a domestic order 1`] = `
{
  "cubic_metre_volume": null,
  "customer_reference": "1337",
  "description": "Test",
  "hide_pickup_address": false,
  "kilogram_weight": "1.0",
  "labels": Any<Array>,
  "metadata": {
    "userId": 100,
  },
  "order_id": Any<String>,
  "order_url": Any<String>,
  "packaging_type": "box",
  "price": {
    "gross": {
      "amount": Any<Number>,
      "currency": "AUD",
    },
    "net": {
      "amount": Any<Number>,
      "currency": "AUD",
    },
    "tax": {
      "amount": Any<Number>,
      "currency": "AUD",
    },
  },
  "price_breakdown": {
    "base": {
      "amount": Any<Number>,
      "currency": "AUD",
    },
    "base_tax": {
      "amount": Any<Number>,
      "currency": "AUD",
    },
    "cover": {
      "amount": 0,
      "currency": "AUD",
    },
    "cover_tax": {
      "amount": 0,
      "currency": "AUD",
    },
    "discount": {
      "amount": 0,
      "currency": "AUD",
    },
    "discount_tax": {
      "amount": 0,
      "currency": "AUD",
    },
    "fuel_surcharge": {
      "amount": Any<Number>,
      "currency": "AUD",
    },
    "fuel_surcharge_tax": {
      "amount": Any<Number>,
      "currency": "AUD",
    },
  },
  "receiver": {
    "address": {
      "address_line1": "80 Wentworth Park Road",
      "address_line2": null,
      "country": "Australia",
      "postcode": "0800",
      "state_name": "NT",
      "suburb": "Darwin",
    },
    "contact": {
      "company": "Daily Planet",
      "email": "clarkissuper@dailyplanet.xyz",
      "name": "Clark Kent",
      "phone": null,
    },
    "instructions": "Signature on Delivery",
  },
  "route": {
    "description": "Sydney, Australia to Remote WA and NT, Australia",
    "type": "remote",
  },
  "scheduling": {
    "delivered_on": null,
    "estimated_delivery_date_maximum": Any<String>,
    "estimated_delivery_date_minimum": Any<String>,
    "is_cancellable": true,
    "picked_up_on": null,
    "pickup_date": Any<String>,
    "status": null,
  },
  "sender": {
    "address": {
      "address_line1": "123 Gotham Ln",
      "address_line2": null,
      "country": "Australia",
      "postcode": "2000",
      "state_name": "NSW",
      "suburb": "Sydney",
    },
    "contact": {
      "company": null,
      "email": Any<String>,
      "name": "Lex Luthor",
      "phone": null,
      "sendle_id": Any<String>,
    },
    "instructions": null,
  },
  "sendle_reference": Any<String>,
  "state": "Pickup",
  "tax_breakdown": {
    "gst": {
      "amount": Any<Number>,
      "currency": "AUD",
      "rate": 0.1,
    },
  },
  "tracking_url": Any<String>,
  "volume": null,
  "weight": {
    "units": "kg",
    "value": "1.0",
  },
}
`;

exports[`Orders > should create an international order 1`] = `
{
  "contents": {
    "country_of_origin": "China",
    "currency": "AUD",
    "description": "T-shirt",
    "value": "20.0",
  },
  "cubic_metre_volume": "0.01",
  "customer_reference": "SupBdayPressie",
  "description": "Kryptonite",
  "hide_pickup_address": false,
  "kilogram_weight": "1.0",
  "labels": Any<Array>,
  "metadata": {
    "your_data": "XYZ123",
  },
  "order_id": Any<String>,
  "order_url": Any<String>,
  "packaging_type": "box",
  "parcel_contents": [
    {
      "country_of_origin": "China",
      "currency": "AUD",
      "description": "T-shirt",
      "hs_code": "610910",
      "quantity": 1,
      "value": "20.0",
    },
  ],
  "price": {
    "gross": {
      "amount": Any<Number>,
      "currency": "AUD",
    },
    "net": {
      "amount": Any<Number>,
      "currency": "AUD",
    },
    "tax": {
      "amount": Any<Number>,
      "currency": "AUD",
    },
  },
  "price_breakdown": {
    "base": {
      "amount": Any<Number>,
      "currency": "AUD",
    },
    "base_tax": {
      "amount": Any<Number>,
      "currency": "AUD",
    },
    "cover": {
      "amount": 0,
      "currency": "AUD",
    },
    "cover_tax": {
      "amount": 0,
      "currency": "AUD",
    },
    "discount": {
      "amount": 0,
      "currency": "AUD",
    },
    "discount_tax": {
      "amount": 0,
      "currency": "AUD",
    },
    "fuel_surcharge": {
      "amount": Any<Number>,
      "currency": "AUD",
    },
    "fuel_surcharge_tax": {
      "amount": Any<Number>,
      "currency": "AUD",
    },
  },
  "receiver": {
    "address": {
      "address_line1": "445 Mount Eden Road",
      "address_line2": null,
      "country": "New Zealand",
      "postcode": "2025",
      "state_name": null,
      "suburb": "Auckland",
    },
    "contact": {
      "company": null,
      "email": "clarkissuper@dailyplanet.xyz",
      "name": "Clark Kent",
      "phone": null,
    },
    "instructions": "Give directly to Clark",
  },
  "route": {
    "description": "Sydney, Australia to New Zealand",
    "type": "export",
  },
  "scheduling": {
    "delivered_on": null,
    "estimated_delivery_date_maximum": Any<String>,
    "estimated_delivery_date_minimum": Any<String>,
    "is_cancellable": true,
    "picked_up_on": null,
    "pickup_date": Any<String>,
    "status": null,
  },
  "sender": {
    "address": {
      "address_line1": "123 Gotham Ln",
      "address_line2": null,
      "country": "Australia",
      "postcode": "2000",
      "state_name": "NSW",
      "suburb": "Sydney",
    },
    "contact": {
      "company": null,
      "email": Any<String>,
      "name": "Lex Luthor",
      "phone": "0412 345 678",
      "sendle_id": Any<String>,
    },
    "instructions": "Knock loudly",
  },
  "sendle_reference": Any<String>,
  "state": "Pickup",
  "tracking_url": Any<String>,
  "volume": {
    "units": "m3",
    "value": "0.01",
  },
  "weight": {
    "units": "kg",
    "value": "1.0",
  },
}
`;

exports[`Orders > should return tracking for my order 1`] = `
{
  "destination": {
    "country": "AU",
  },
  "origin": {
    "country": "AU",
  },
  "scheduling": {
    "delivered_on": null,
    "estimated_delivery_date_maximum": Any<String>,
    "estimated_delivery_date_minimum": Any<String>,
    "picked_up_on": null,
    "pickup_date": Any<String>,
    "status": null,
  },
  "state": "Pickup",
  "status": {
    "description": Any<String>,
    "last_changed_at": Any<String>,
  },
  "tracking_events": [],
}
`;
